se modifica codigo por error linea 44

--- a/Model_based_collaborative_filtering.ipynb
+++ b/Model_based_collaborative_filtering.ipynb
@@ -16,7 +16,7 @@
         "id": "EdILuyLgml_R"
       },
       "source": [
-        "#E-commerce Product recommendation System"
+        "#Sistema de recomendación de productos de comercio electrónico"
       ]
     },
     {
@@ -25,12 +25,12 @@
         "id": "m-26iTTympFi"
       },
       "source": [
-        "##Importing libraries"
+        "##Importar librerías"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "2tSOMad1mlsK"
       },
@@ -49,7 +49,7 @@
         "\n",
         "from sklearn.metrics import mean_squared_error\n",
         "\n",
-        "from scipy.sparse.linalg import svds # for sparse matrices"
+        "from scipy.sparse.linalg import svds # para matrices dispersas"
       ]
     },
     {
@@ -58,7 +58,7 @@
         "id": "_eRqhkyAmvFJ"
       },
       "source": [
-        "## Importing Dataset"
+        "## Importar conjunto de datos"
       ]
     },
     {
@@ -69,14 +69,14 @@
       },
       "outputs": [],
       "source": [
-        "#Import the data set\n",
-        "df = pd.read_csv('ratings_Electronics.csv', header=None) #There are no headers in the data file\n",
+        "#Importar el conjunto de datos\n",
+        "df = pd.read_csv('ratings_Electronics.csv', header=None) #No hay encabezados en el archivo de datos\n",
         "\n",
-        "df.columns = ['user_id', 'prod_id', 'rating', 'timestamp'] #Adding column names\n",
+        "df.columns = ['user_id', 'prod_id', 'rating', 'timestamp'] #Agregando nombres de columnas\n",
         "\n",
-        "df = df.drop('timestamp', axis=1) #Dropping timestamp\n",
+        "df = df.drop('timestamp', axis=1) #Eliminando marca de tiempo\n",
         "\n",
-        "df_copy = df.copy(deep=True) #Copying the data to another dataframe"
+        "df_copy = df.copy(deep=True) #Copiar los datos a otro dataframe"
       ]
     },
     {
@@ -85,18 +85,18 @@
         "id": "tbUt2ZCcm2PZ"
       },
       "source": [
-        "## EDA - Exploratory Data Analysis\n",
+        "## EDA - Análisis Exploratorio de Datos\n",
         "\n",
-        "check for -\n",
-        "- shape \n",
-        "- datatype\n",
-        "- missing values\n",
+        "Verificar:\n",
+        "- forma\n",
+        "- tipo de dato\n",
+        "- valores faltantes\n",
         "\n",
         "\n",
-        "finally get the summary and check\n",
-        "- rating distribution.\n",
-        "- number of users and products.\n",
-        "- Users with highest no of ratings."
+        "Finalmente obtener el resumen y verificar:\n",
+        "- distribución de calificaciones.\n",
+        "- número de usuarios y productos.\n",
+        "- Usuarios con el mayor número de calificaciones."
       ]
     },
     {
@@ -105,12 +105,12 @@
         "id": "P31sJRBKm7Ox"
       },
       "source": [
-        "### Shape"
+        "### Forma"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -130,8 +130,8 @@
       ],
       "source": [
         "rows, columns = df.shape\n",
-        "print(\"No of rows = \", rows)\n",
-        "print(\"No of columns = \", columns)"
+        "print(\"Número de filas = \", rows)\n",
+        "print(\"Número de columnas = \", columns)"
       ]
     },
     {
@@ -140,7 +140,7 @@
         "id": "BR_AWE5dm-Aw"
       },
       "source": [
-        "### Datatypes"
+        "### Tipos de datos"
       ]
     },
     {
@@ -181,12 +181,12 @@
         "id": "nMpYlCbKm__h"
       },
       "source": [
-        "### Missing value analysis"
+        "### Análisis de valores faltantes"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -210,7 +210,7 @@
         }
       ],
       "source": [
-        "# Find number of missing values in each column\n",
+        "# Encontrar el número de valores faltantes en cada columna\n",
         "df.isna().sum()"
       ]
     },
@@ -220,12 +220,12 @@
         "id": "NuapKpPOnIxg"
       },
       "source": [
-        "### Summary"
+        "### Resumen"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -254,7 +254,7 @@
         }
       ],
       "source": [
-        "# Summary statistics of 'rating' variable\n",
+        "# Estadísticas resumidas de la variable 'rating'\n",
         "df['rating'].describe()"
       ]
     },
@@ -264,12 +264,12 @@
         "id": "qITdLlQenOL5"
       },
       "source": [
-        "### Rating distribution"
+        "### Distribución de calificaciones"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -291,7 +291,7 @@
         }
       ],
       "source": [
-        "#Create the plot and provide observations\n",
+        "#Crear el gráfico y proporcionar observaciones\n",
         "\n",
         "plt.figure(figsize = (12,6))\n",
         "df['rating'].value_counts(1).plot(kind='bar')\n",
@@ -304,7 +304,7 @@
         "id": "EyqB_PZOnbNq"
       },
       "source": [
-        "The distribution is skewed to the right. Over 50% of the ratings are 5, followed by a little below 20% with 4 star ratings. And the percentages of ratings keep going down until below 10% of the ratings are 2 stars."
+        "La distribución está sesgada hacia la derecha. Más del 50% de las calificaciones son 5, seguido de poco menos del 20% con calificaciones de 4 estrellas. Y los porcentajes de calificaciones siguen bajando hasta que menos del 10% de las calificaciones son de 2 estrellas."
       ]
     },
     {
@@ -313,12 +313,12 @@
         "id": "_hoBfcSmncDJ"
       },
       "source": [
-        "### No of unique users and items"
+        "### Número de usuarios y elementos únicos"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -337,9 +337,9 @@
         }
       ],
       "source": [
-        "# Number of unique user id and product id in the data\n",
-        "print('Number of unique USERS in Raw data = ', df['user_id'].nunique())\n",
-        "print('Number of unique ITEMS in Raw data = ', df['prod_id'].nunique())"
+        "# Número de ID de usuario e ID de producto únicos en los datos\n",
+        "print('Número de USUARIOS únicos en datos sin procesar = ', df['user_id'].nunique())\n",
+        "print('Número de ARTÍCULOS únicos en datos sin procesar = ', df['prod_id'].nunique())"
       ]
     },
     {
@@ -348,12 +348,12 @@
         "id": "PhOahvbHnkZJ"
       },
       "source": [
-        "### Users with most no of rating"
+        "### Usuarios con mayor número de calificaciones"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -385,7 +385,7 @@
         }
       ],
       "source": [
-        "# Top 10 users based on rating\n",
+        "# Top 10 usuarios por calificaciones\n",
         "most_rated = df.groupby('user_id').size().sort_values(ascending=False)[:10]\n",
         "most_rated"
       ]
@@ -396,9 +396,9 @@
         "id": "ekGg2mL5oaNA"
       },
       "source": [
-        "## Pre-Processing\n",
+        "## Pre-procesamiento\n",
         "\n",
-        "Let's take a subset of the dataset (by only keeping the users who have given 50 or more ratings) to make the dataset less sparse and easy to work with."
+        "Tomemos un subconjunto del conjunto de datos (manteniendo solo a los usuarios que han dado 50 o más calificaciones) para hacer que el conjunto de datos sea menos disperso y fácil de trabajar."
       ]
     },
     {
@@ -415,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -435,9 +435,9 @@
         }
       ],
       "source": [
-        "print('The number of observations in the final data =', len(df_final))\n",
-        "print('Number of unique USERS in the final data = ', df_final['user_id'].nunique())\n",
-        "print('Number of unique PRODUCTS in the final data = ', df_final['prod_id'].nunique())"
+        "print('El número de observaciones en los datos finales =', len(df_final))\n",
+        "print('Número de USUARIOS únicos en los datos finales = ', df_final['user_id'].nunique())\n",
+        "print('Número de PRODUCTOS únicos en los datos finales = ', df_final['prod_id'].nunique())"
       ]
     },
     {
@@ -446,8 +446,8 @@
         "id": "tsmGpFwqocrg"
       },
       "source": [
-        "- The dataframe **df_final has users who have rated 50 or more items**\n",
-        "- **We will use df_final to build recommendation systems**"
+        "- El dataframe **df_final tiene usuarios que han calificado 50 o más artículos**\n",
+        "- **Usaremos df_final para construir sistemas de recomendación**"
       ]
     },
     {
@@ -456,12 +456,12 @@
         "id": "k6t4Ee-Oo0vD"
       },
       "source": [
-        "### Checking the density of the rating matrix"
+        "### Verificar la densidad de la matriz de calificaciones"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -804,22 +804,22 @@
         }
       ],
       "source": [
-        "#Creating the interaction matrix of products and users based on ratings and replacing NaN value with 0\n",
+        "#Crear la matriz de interacción de productos y usuarios basada en calificaciones y reemplazar valores NaN con 0\n",
         "final_ratings_matrix = df_final.pivot(index = 'user_id', columns ='prod_id', values = 'rating').fillna(0)\n",
-        "print('Shape of final_ratings_matrix: ', final_ratings_matrix.shape)\n",
+        "print('Forma de final_ratings_matrix: ', final_ratings_matrix.shape)\n",
         "\n",
-        "#Finding the number of non-zero entries in the interaction matrix \n",
+        "#Encontrar el número de entradas distintas de cero en la matriz de interacción \n",
         "given_num_of_ratings = np.count_nonzero(final_ratings_matrix)\n",
         "print('given_num_of_ratings = ', given_num_of_ratings)\n",
         "\n",
-        "#Finding the possible number of ratings as per the number of users and products\n",
+        "#Encontrar el número posible de calificaciones según el número de usuarios y productos\n",
         "possible_num_of_ratings = final_ratings_matrix.shape[0] * final_ratings_matrix.shape[1]\n",
         "print('possible_num_of_ratings = ', possible_num_of_ratings)\n",
         "\n",
-        "#Density of ratings\n",
+        "#Densidad de calificaciones\n",
         "density = (given_num_of_ratings/possible_num_of_ratings)\n",
         "density *= 100\n",
-        "print ('density: {:4.2f}%'.format(density))\n",
+        "print ('densidad: {:4.2f}%'.format(density))\n",
         "\n",
         "final_ratings_matrix.head()"
       ]
@@ -830,11 +830,11 @@
         "id": "B9fOdRwUdbKa"
       },
       "source": [
-        "# Model based Collaborative Filtering: Singular Value Decomposition \n",
+        "# Filtrado Colaborativo Basado en Modelos: Descomposición de Valores Singulares \n",
         "\n",
-        "**We have seen above that the interaction matrix is highly sparse. SVD is best to apply on a large sparse matrix. Note that for sparse matrices, we can use the sparse.linalg.svds() function to perform the decomposition**\n",
+        "**Hemos visto arriba que la matriz de interacción es altamente dispersa. SVD es mejor para aplicar en una matriz dispersa grande. Tenga en cuenta que para matrices dispersas, podemos usar la función sparse.linalg.svds() para realizar la descomposición**\n",
         "\n",
-        "Also, we will use **k=50 latent features** to predict rating of products"
+        "Además, usaremos **k=50 características latentes** para predecir la calificación de productos"
       ]
     },
     {
@@ -843,7 +843,7 @@
         "id": "RXgHZdNYmoKD"
       },
       "source": [
-        "## CSR matrix"
+        "## Matriz CSR"
       ]
     },
     {
@@ -869,16 +869,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": null,
       "metadata": {
         "id": "D8BDZzhXdhKa"
       },
       "outputs": [],
       "source": [
-        "# Singular Value Decomposition\n",
-        "U, s, Vt = svds(final_ratings_sparse, k = 50) # here k is the number of latent features\n",
+        "# Descomposición de Valores Singulares\n",
+        "U, s, Vt = svds(final_ratings_sparse, k = 50) # aquí k es el número de características latentes\n",
         "\n",
-        "# Construct diagonal array in SVD\n",
+        "# Construir matriz diagonal en SVD\n",
         "sigma = np.diag(s)"
       ]
     },
@@ -966,7 +966,7 @@
         "id": "FSE_KKudftuk"
       },
       "source": [
-        "Now, let's regenerate the original matrix using U, Sigma, and Vt matrices. The resulting matrix would be the predicted ratings for all users and products"
+        "Ahora, regeneremos la matriz original usando matrices U, Sigma y Vt. La matriz resultante sería las calificaciones predichas para todos los usuarios y productos"
       ]
     },
     {
@@ -975,12 +975,12 @@
         "id": "BVnvgQkwmvfL"
       },
       "source": [
-        "## Predicting ratings"
+        "## Prediciendo calificaciones"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": null,
       "metadata": {
         "id": "hURsS2H3fuby"
       },
@@ -988,7 +988,7 @@
       "source": [
         "all_user_predicted_ratings = np.dot(np.dot(U, sigma), Vt) \n",
         "\n",
-        "# Predicted ratings\n",
+        "# Calificaciones predichas\n",
         "preds_df = pd.DataFrame(abs(all_user_predicted_ratings), columns = final_ratings_matrix.columns)\n",
         "preds_df.head()\n",
         "preds_matrix = csr_matrix(preds_df.values)"
@@ -1000,12 +1000,12 @@
         "id": "jRS4Fndbfx-c"
       },
       "source": [
-        "## Function to recommend products"
+        "## Función para recomendar productos"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": null,
       "metadata": {
         "id": "IMI2d1sXiILL"
       },
@@ -1015,22 +1015,22 @@
         "\n",
         "def recommend_items(user_index, interactions_matrix, preds_matrix, num_recommendations):\n",
         "    \n",
-        "    # Get the user's ratings from the actual and predicted interaction matrices\n",
+        "    # Obtener las calificaciones del usuario de las matrices de interacción reales y predichas\n",
         "    user_ratings = interactions_matrix[user_index,:].toarray().reshape(-1)\n",
         "    user_predictions = preds_matrix[user_index,:].toarray().reshape(-1)\n",
         "\n",
-        "    #Creating a dataframe with actual and predicted ratings columns\n",
+        "    #Creando un dataframe con columnas de calificaciones reales y predichas\n",
         "    temp = pd.DataFrame({'user_ratings': user_ratings, 'user_predictions': user_predictions})\n",
         "    temp['Recommended Products'] = np.arange(len(user_ratings))\n",
         "    temp = temp.set_index('Recommended Products')\n",
         "    \n",
-        "    #Filtering the dataframe where actual ratings are 0 which implies that the user has not interacted with that product\n",
+        "    #Filtrando el dataframe donde las calificaciones reales son 0 lo que implica que el usuario no ha interactuado con ese producto\n",
         "    temp = temp.loc[temp.user_ratings == 0]   \n",
         "    \n",
-        "    #Recommending products with top predicted ratings\n",
-        "    temp = temp.sort_values('user_predictions',ascending=False)#Sort the dataframe by user_predictions in descending order\n",
-        "    print('\\nBelow are the recommended products for user(user_id = {}):\\n'.format(user_index))\n",
-        "    print(temp['user_predictions'].head(num_recommendations))\n"
+        "    #Recomendando productos con calificaciones predichas principales\n",
+        "    temp = temp.sort_values('user_predictions',ascending=False)#Ordenar el dataframe por user_predictions en orden descendente\n",
+        "    print('\\nA continuación se encuentran los productos recomendados para el usuario(user_id = {}):\\n'.format(user_index))\n",
+        "    print(temp['user_predictions'].head(num_recommendations))"
       ]
     },
     {
@@ -1039,12 +1039,12 @@
         "id": "ni3knh42f5qa"
       },
       "source": [
-        "### Recommending top 5 products to user id 121"
+        "### Recomendando los 5 productos principales al ID de usuario 121"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1071,7 +1071,7 @@
         }
       ],
       "source": [
-        "#Enter 'user index' and 'num_recommendations' for the user\n",
+        "#Ingresar 'índice de usuario' y 'num_recomendaciones' para el usuario\n",
         "recommend_items(121,final_ratings_sparse,preds_matrix,5)"
       ]
     },
@@ -1081,7 +1081,7 @@
         "id": "913jkZjPm9qr"
       },
       "source": [
-        "### Recommending top 10 products to user id 100"
+        "### Recomendando los 10 productos principales al ID de usuario 100"
       ]
     },
     {
@@ -1127,12 +1127,12 @@
         "id": "th5-d8wFmD9r"
       },
       "source": [
-        "## Evaluating the model"
+        "## Evaluando el modelo"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1460,7 +1460,7 @@
         "final_ratings_matrix['user_index'] = np.arange(0, final_ratings_matrix.shape[0])\n",
         "final_ratings_matrix.set_index(['user_index'], inplace=True)\n",
         "\n",
-        "# Actual ratings given by users\n",
+        "# Calificaciones reales dadas por los usuarios\n",
         "final_ratings_matrix.head()"
       ]
     },
