--- a/User_based_collaborative_filtering.ipynb
+++ b/User_based_collaborative_filtering.ipynb
@@ -16,7 +16,7 @@
         "id": "EdILuyLgml_R"
       },
       "source": [
-        "#E-commerce Product recommendation System"
+        "#Sistema de recomendación de productos de comercio electrónico"
       ]
     },
     {
@@ -25,7 +25,7 @@
         "id": "m-26iTTympFi"
       },
       "source": [
-        "##Importing libraries"
+        "##Importar librerías"
       ]
     },
     {
@@ -56,7 +56,7 @@
         "id": "_eRqhkyAmvFJ"
       },
       "source": [
-        "## Importing Dataset"
+        "## Importar conjunto de datos"
       ]
     },
     {
@@ -67,14 +67,14 @@
       },
       "outputs": [],
       "source": [
-        "#Import the data set\n",
-        "df = pd.read_csv('ratings_Electronics.csv', header=None) #There are no headers in the data file\n",
+        "#Importar el conjunto de datos\n",
+        "df = pd.read_csv('ratings_Electronics.csv', header=None) #No hay encabezados en el archivo de datos\n",
         "\n",
-        "df.columns = ['user_id', 'prod_id', 'rating', 'timestamp'] #Adding column names\n",
+        "df.columns = ['user_id', 'prod_id', 'rating', 'timestamp'] #Agregando nombres de columnas\n",
         "\n",
-        "df = df.drop('timestamp', axis=1) #Dropping timestamp\n",
+        "df = df.drop('timestamp', axis=1) #Eliminando marca de tiempo\n",
         "\n",
-        "df_copy = df.copy(deep=True) #Copying the data to another dataframe"
+        "df_copy = df.copy(deep=True) #Copiar los datos a otro dataframe"
       ]
     },
     {
@@ -83,18 +83,18 @@
         "id": "tbUt2ZCcm2PZ"
       },
       "source": [
-        "## EDA - Exploratory Data Analysis\n",
+        "## EDA - Análisis Exploratorio de Datos\n",
         "\n",
-        "check for -\n",
-        "- shape \n",
-        "- datatype\n",
-        "- missing values\n",
+        "Verificar:\n",
+        "- forma\n",
+        "- tipo de dato\n",
+        "- valores faltantes\n",
         "\n",
         "\n",
-        "finally get the summary and check\n",
-        "- rating distribution.\n",
-        "- number of users and products.\n",
-        "- Users with highest no of ratings."
+        "Finalmente obtener el resumen y verificar:\n",
+        "- distribución de calificaciones.\n",
+        "- número de usuarios y productos.\n",
+        "- Usuarios con el mayor número de calificaciones."
       ]
     },
     {
@@ -103,12 +103,12 @@
         "id": "P31sJRBKm7Ox"
       },
       "source": [
-        "### Shape"
+        "### Forma"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -128,8 +128,8 @@
       ],
       "source": [
         "rows, columns = df.shape\n",
-        "print(\"No of rows = \", rows)\n",
-        "print(\"No of columns = \", columns)"
+        "print(\"Número de filas = \", rows)\n",
+        "print(\"Número de columnas = \", columns)"
       ]
     },
     {
@@ -138,7 +138,7 @@
         "id": "BR_AWE5dm-Aw"
       },
       "source": [
-        "### Datatypes"
+        "### Tipos de datos"
       ]
     },
     {
@@ -179,12 +179,12 @@
         "id": "nMpYlCbKm__h"
       },
       "source": [
-        "### Missing value analysis"
+        "### Análisis de valores faltantes"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -208,7 +208,7 @@
         }
       ],
       "source": [
-        "# Find number of missing values in each column\n",
+        "# Encontrar el número de valores faltantes en cada columna\n",
         "df.isna().sum()"
       ]
     },
@@ -218,12 +218,12 @@
         "id": "NuapKpPOnIxg"
       },
       "source": [
-        "### Summary"
+        "### Resumen"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -252,7 +252,7 @@
         }
       ],
       "source": [
-        "# Summary statistics of 'rating' variable\n",
+        "# Estadísticas resumidas de la variable 'rating'\n",
         "df['rating'].describe()"
       ]
     },
@@ -262,12 +262,12 @@
         "id": "qITdLlQenOL5"
       },
       "source": [
-        "### Rating distribution"
+        "### Distribución de calificaciones"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -289,7 +289,7 @@
         }
       ],
       "source": [
-        "#Create the plot and provide observations\n",
+        "#Crear el gráfico y proporcionar observaciones\n",
         "\n",
         "plt.figure(figsize = (12,6))\n",
         "df['rating'].value_counts(1).plot(kind='bar')\n",
@@ -302,7 +302,7 @@
         "id": "EyqB_PZOnbNq"
       },
       "source": [
-        "The distribution is skewed to the right. Over 50% of the ratings are 5, followed by a little below 20% with 4 star ratings. And the percentages of ratings keep going down until below 10% of the ratings are 2 stars."
+        "La distribución está sesgada hacia la derecha. Más del 50% de las calificaciones son 5, seguido de poco menos del 20% con calificaciones de 4 estrellas. Y los porcentajes de calificaciones siguen bajando hasta que menos del 10% de las calificaciones son de 2 estrellas."
       ]
     },
     {
@@ -311,12 +311,12 @@
         "id": "_hoBfcSmncDJ"
       },
       "source": [
-        "### No of unique users and items"
+        "### Número de usuarios y elementos únicos"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -335,9 +335,9 @@
         }
       ],
       "source": [
-        "# Number of unique user id and product id in the data\n",
-        "print('Number of unique USERS in Raw data = ', df['user_id'].nunique())\n",
-        "print('Number of unique ITEMS in Raw data = ', df['prod_id'].nunique())"
+        "# Número de ID de usuario e ID de producto únicos en los datos\n",
+        "print('Número de USUARIOS únicos en datos sin procesar = ', df['user_id'].nunique())\n",
+        "print('Número de ARTÍCULOS únicos en datos sin procesar = ', df['prod_id'].nunique())"
       ]
     },
     {
@@ -346,12 +346,12 @@
         "id": "PhOahvbHnkZJ"
       },
       "source": [
-        "### Users with most no of rating"
+        "### Usuarios con mayor número de calificaciones"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -383,7 +383,7 @@
         }
       ],
       "source": [
-        "# Top 10 users based on rating\n",
+        "# Top 10 usuarios por calificaciones\n",
         "most_rated = df.groupby('user_id').size().sort_values(ascending=False)[:10]\n",
         "most_rated"
       ]
@@ -394,9 +394,9 @@
         "id": "ekGg2mL5oaNA"
       },
       "source": [
-        "## Pre-Processing\n",
+        "## Pre-procesamiento\n",
         "\n",
-        "Let's take a subset of the dataset (by only keeping the users who have given 50 or more ratings) to make the dataset less sparse and easy to work with."
+        "Tomemos un subconjunto del conjunto de datos (manteniendo solo a los usuarios que han dado 50 o más calificaciones) para hacer que el conjunto de datos sea menos disperso y fácil de trabajar."
       ]
     },
     {
@@ -413,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -433,9 +433,9 @@
         }
       ],
       "source": [
-        "print('The number of observations in the final data =', len(df_final))\n",
-        "print('Number of unique USERS in the final data = ', df_final['user_id'].nunique())\n",
-        "print('Number of unique PRODUCTS in the final data = ', df_final['prod_id'].nunique())"
+        "print('El número de observaciones en los datos finales =', len(df_final))\n",
+        "print('Número de USUARIOS únicos en los datos finales = ', df_final['user_id'].nunique())\n",
+        "print('Número de PRODUCTOS únicos en los datos finales = ', df_final['prod_id'].nunique())"
       ]
     },
     {
@@ -444,8 +444,8 @@
         "id": "tsmGpFwqocrg"
       },
       "source": [
-        "- The dataframe **df_final has users who have rated 50 or more items**\n",
-        "- **We will use df_final to build recommendation systems**"
+        "- El dataframe **df_final tiene usuarios que han calificado 50 o más artículos**\n",
+        "- **Usaremos df_final para construir sistemas de recomendación**"
       ]
     },
     {
@@ -454,12 +454,12 @@
         "id": "k6t4Ee-Oo0vD"
       },
       "source": [
-        "### Checking the density of the rating matrix"
+        "### Verificar la densidad de la matriz de calificaciones"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -802,22 +802,22 @@
         }
       ],
       "source": [
-        "#Creating the interaction matrix of products and users based on ratings and replacing NaN value with 0\n",
+        "#Crear la matriz de interacción de productos y usuarios basada en calificaciones y reemplazar valores NaN con 0\n",
         "final_ratings_matrix = df_final.pivot(index = 'user_id', columns ='prod_id', values = 'rating').fillna(0)\n",
-        "print('Shape of final_ratings_matrix: ', final_ratings_matrix.shape)\n",
+        "print('Forma de final_ratings_matrix: ', final_ratings_matrix.shape)\n",
         "\n",
-        "#Finding the number of non-zero entries in the interaction matrix \n",
+        "#Encontrar el número de entradas distintas de cero en la matriz de interacción \n",
         "given_num_of_ratings = np.count_nonzero(final_ratings_matrix)\n",
         "print('given_num_of_ratings = ', given_num_of_ratings)\n",
         "\n",
-        "#Finding the possible number of ratings as per the number of users and products\n",
+        "#Encontrar el número posible de calificaciones según el número de usuarios y productos\n",
         "possible_num_of_ratings = final_ratings_matrix.shape[0] * final_ratings_matrix.shape[1]\n",
         "print('possible_num_of_ratings = ', possible_num_of_ratings)\n",
         "\n",
-        "#Density of ratings\n",
+        "#Densidad de calificaciones\n",
         "density = (given_num_of_ratings/possible_num_of_ratings)\n",
         "density *= 100\n",
-        "print ('density: {:4.2f}%'.format(density))\n",
+        "print ('densidad: {:4.2f}%'.format(density))\n",
         "\n",
         "final_ratings_matrix.head()"
       ]
@@ -828,7 +828,7 @@
         "id": "2ykt7MfyXw1d"
       },
       "source": [
-        "# Collaborative Filtering based Recommendation System "
+        "# Sistema de Recomendación Basado en Filtrado Colaborativo"
       ]
     },
     {
@@ -837,7 +837,7 @@
         "id": "hXdPQ-0PcUVE"
       },
       "source": [
-        "## User based collaborative filtering"
+        "## Filtrado colaborativo basado en el usuario"
       ]
     },
     {
@@ -1184,12 +1184,12 @@
         "id": "JVADHXQHX7_S"
       },
       "source": [
-        "Here, user_id (index) is of the object data type. We will replace the user_id by numbers starting from 0 to 1539 (for all user ids) so that the index is of integer type and represents a user id in the same format"
+        "Aquí, user_id (índice) es del tipo de dato objeto. Reemplazaremos el user_id por números comenzando desde 0 hasta 1539 (para todos los IDs de usuario) para que el índice sea de tipo entero y represente un ID de usuario en el mismo formato"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1517,7 +1517,7 @@
         "final_ratings_matrix['user_index'] = np.arange(0, final_ratings_matrix.shape[0])\n",
         "final_ratings_matrix.set_index(['user_index'], inplace=True)\n",
         "\n",
-        "# Actual ratings given by users\n",
+        "# Calificaciones reales dadas por los usuarios\n",
         "final_ratings_matrix.head()"
       ]
     },
@@ -1527,33 +1527,33 @@
         "id": "XF4rlGcsb8-D"
       },
       "source": [
-        "### Function to find Similar users and their similarity scores"
+        "### Función para encontrar usuarios similares y sus puntuaciones de similitud"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "OlJyXfxTX_I7"
       },
       "outputs": [],
       "source": [
-        "# defining a function to get similar users\n",
+        "# definiendo una función para obtener usuarios similares\n",
         "def similar_users(user_index, interactions_matrix):\n",
         "    similarity = []\n",
-        "    for user in range(0, interactions_matrix.shape[0]): #  .shape[0] gives number of rows\n",
+        "    for user in range(0, interactions_matrix.shape[0]): #  .shape[0] da el número de filas\n",
         "        \n",
-        "        #finding cosine similarity between the user_id and each user\n",
+        "        #encontrar la similitud del coseno entre el user_id y cada usuario\n",
         "        sim = cosine_similarity([interactions_matrix.loc[user_index]], [interactions_matrix.loc[user]])\n",
         "        \n",
-        "        #Appending the user and the corresponding similarity score with user_id as a tuple\n",
+        "        #Agregando el usuario y la puntuación de similitud correspondiente con user_id como tupla\n",
         "        similarity.append((user,sim))\n",
         "        \n",
         "    similarity.sort(key=lambda x: x[1], reverse=True)\n",
-        "    most_similar_users = [tup[0] for tup in similarity] #Extract the user from each tuple in the sorted list\n",
-        "    similarity_score = [tup[1] for tup in similarity] ##Extracting the similarity score from each tuple in the sorted list\n",
+        "    most_similar_users = [tup[0] for tup in similarity] #Extraer el usuario de cada tupla en la lista ordenada\n",
+        "    similarity_score = [tup[1] for tup in similarity] ##Extrayendo la puntuación de similitud de cada tupla en la lista ordenada\n",
         "   \n",
-        "    #Remove the original user and its similarity score and keep only other similar users \n",
+        "    #Eliminar el usuario original y su puntuación de similitud y mantener solo otros usuarios similares \n",
         "    most_similar_users.remove(user_index)\n",
         "    similarity_score.remove(similarity_score[0])\n",
         "       \n",
@@ -1566,7 +1566,7 @@
         "id": "t8YQa3aSYDQc"
       },
       "source": [
-        "#### Finding out top 10 similar users to the user index 3 and their similarity score"
+        "#### Encontrando los 10 usuarios similares principales al índice de usuario 3 y sus puntuaciones de similitud"
       ]
     },
     {
@@ -1598,7 +1598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1628,7 +1628,7 @@
         }
       ],
       "source": [
-        "#Print the similarity score\n",
+        "#Imprimir la puntuación de similitud\n",
         "similar_users(3,final_ratings_matrix)[1][0:10]"
       ]
     },
@@ -1638,7 +1638,7 @@
         "id": "ozHlmOBmYHeT"
       },
       "source": [
-        "#### Finding out top 10 similar users to the user index 1521 and their similarity score"
+        "#### Encontrando los 10 usuarios similares principales al índice de usuario 1521 y sus puntuaciones de similitud"
       ]
     },
     {
@@ -1670,7 +1670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1700,7 +1700,7 @@
         }
       ],
       "source": [
-        "#Print the similarity score\n",
+        "#Imprimir la puntuación de similitud\n",
         "similar_users(1521,final_ratings_matrix)[1][0:10]"
       ]
     },
@@ -1710,24 +1710,24 @@
         "id": "qXSJzV0EcFcC"
       },
       "source": [
-        "### Function to recommend products"
+        "### Función para recomendar productos"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "uq6Wzl1kYX3U"
       },
       "outputs": [],
       "source": [
-        "# defining the recommendations function to get recommendations by using the similar users' preferences\n",
+        "# definiendo la función de recomendaciones para obtener recomendaciones utilizando las preferencias de usuarios similares\n",
         "def recommendations(user_index, num_of_products, interactions_matrix):\n",
         "    \n",
-        "    #Saving similar users using the function similar_users defined above\n",
+        "    #Guardando usuarios similares usando la función similar_users definida arriba\n",
         "    most_similar_users = similar_users(user_index, interactions_matrix)[0]\n",
         "    \n",
-        "    #Finding product IDs with which the user_id has interacted\n",
+        "    #Encontrar IDs de producto con los que el user_id ha interactuado\n",
         "    prod_ids = set(list(interactions_matrix.columns[np.where(interactions_matrix.loc[user_index] > 0)]))\n",
         "    recommendations = []\n",
         "    \n",
@@ -1735,7 +1735,7 @@
         "    for similar_user in most_similar_users:\n",
         "        if len(recommendations) < num_of_products:\n",
         "            \n",
-        "            #Finding 'n' products which have been rated by similar users but not by the user_id\n",
+        "            #Encontrar 'n' productos que han sido calificados por usuarios similares pero no por el user_id\n",
         "            similar_user_prod_ids = set(list(interactions_matrix.columns[np.where(interactions_matrix.loc[similar_user] > 0)]))\n",
         "            recommendations.extend(list(similar_user_prod_ids.difference(observed_interactions)))\n",
         "            observed_interactions = observed_interactions.union(similar_user_prod_ids)\n",
@@ -1751,7 +1751,7 @@
         "id": "p6IzV6fTYbhW"
       },
       "source": [
-        "#### Recommend 5 products to user index 3 based on similarity based collaborative filtering"
+        "#### Recomendar 5 productos al índice de usuario 3 basado en filtrado colaborativo basado en similitud"
       ]
     },
     {
@@ -1786,7 +1786,7 @@
         "id": "pNxqmWlAYoiK"
       },
       "source": [
-        "#### Recommend 5 products to user index 1521 based on similarity based collaborative filtering"
+        "#### Recomendar 5 productos al índice de usuario 1521 basado en filtrado colaborativo basado en similitud"
       ]
     },
     {
