--- a/rank_based_product_recommendation.ipynb
+++ b/rank_based_product_recommendation.ipynb
@@ -16,7 +16,7 @@
         "id": "EdILuyLgml_R"
       },
       "source": [
-        "#E-commerce Product recommendation System"
+        "#Sistema de recomendación de productos de comercio electrónico"
       ]
     },
     {
@@ -25,7 +25,7 @@
         "id": "m-26iTTympFi"
       },
       "source": [
-        "##Importing libraries"
+        "##Importar librerías"
       ]
     },
     {
@@ -56,7 +56,7 @@
         "id": "_eRqhkyAmvFJ"
       },
       "source": [
-        "## Importing Dataset"
+        "## Importar conjunto de datos"
       ]
     },
     {
@@ -67,14 +67,14 @@
       },
       "outputs": [],
       "source": [
-        "#Import the data set\n",
-        "df = pd.read_csv('ratings_Electronics.csv', header=None) #There are no headers in the data file\n",
+        "#Importar el conjunto de datos\n",
+        "df = pd.read_csv('ratings_Electronics.csv', header=None) #No hay encabezados en el archivo de datos\n",
         "\n",
-        "df.columns = ['user_id', 'prod_id', 'rating', 'timestamp'] #Adding column names\n",
+        "df.columns = ['user_id', 'prod_id', 'rating', 'timestamp'] #Agregando nombres de columnas\n",
         "\n",
-        "df = df.drop('timestamp', axis=1) #Dropping timestamp\n",
+        "df = df.drop('timestamp', axis=1) #Eliminando marca de tiempo\n",
         "\n",
-        "df_copy = df.copy(deep=True) #Copying the data to another dataframe"
+        "df_copy = df.copy(deep=True) #Copiar los datos a otro dataframe"
       ]
     },
     {
@@ -83,18 +83,18 @@
         "id": "tbUt2ZCcm2PZ"
       },
       "source": [
-        "## EDA - Exploratory Data Analysis\n",
+        "## EDA - Análisis Exploratorio de Datos\n",
         "\n",
-        "check for -\n",
-        "- shape \n",
-        "- datatype\n",
-        "- missing values\n",
+        "Verificar:\n",
+        "- forma\n",
+        "- tipo de dato\n",
+        "- valores faltantes\n",
         "\n",
         "\n",
-        "finally get the summary and check\n",
-        "- rating distribution.\n",
-        "- number of users and products.\n",
-        "- Users with highest no of ratings."
+        "Finalmente obtener el resumen y verificar:\n",
+        "- distribución de calificaciones.\n",
+        "- número de usuarios y productos.\n",
+        "- Usuarios con el mayor número de calificaciones."
       ]
     },
     {
@@ -103,12 +103,12 @@
         "id": "P31sJRBKm7Ox"
       },
       "source": [
-        "### Shape"
+        "### Forma"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -128,8 +128,8 @@
       ],
       "source": [
         "rows, columns = df.shape\n",
-        "print(\"No of rows = \", rows)\n",
-        "print(\"No of columns = \", columns)"
+        "print(\"Número de filas = \", rows)\n",
+        "print(\"Número de columnas = \", columns)"
       ]
     },
     {
@@ -138,7 +138,7 @@
         "id": "BR_AWE5dm-Aw"
       },
       "source": [
-        "### Datatypes"
+        "### Tipos de datos"
       ]
     },
     {
@@ -179,12 +179,12 @@
         "id": "nMpYlCbKm__h"
       },
       "source": [
-        "### Missing value analysis"
+        "### Análisis de valores faltantes"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -208,7 +208,7 @@
         }
       ],
       "source": [
-        "# Find number of missing values in each column\n",
+        "# Encontrar el número de valores faltantes en cada columna\n",
         "df.isna().sum()"
       ]
     },
@@ -218,12 +218,12 @@
         "id": "NuapKpPOnIxg"
       },
       "source": [
-        "### Summary"
+        "### Resumen"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -252,7 +252,7 @@
         }
       ],
       "source": [
-        "# Summary statistics of 'rating' variable\n",
+        "# Estadísticas resumidas de la variable 'rating'\n",
         "df['rating'].describe()"
       ]
     },
@@ -262,12 +262,12 @@
         "id": "qITdLlQenOL5"
       },
       "source": [
-        "### Rating distribution"
+        "### Distribución de calificaciones"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -289,7 +289,7 @@
         }
       ],
       "source": [
-        "#Create the plot and provide observations\n",
+        "#Crear el gráfico y proporcionar observaciones\n",
         "\n",
         "plt.figure(figsize = (12,6))\n",
         "df['rating'].value_counts(1).plot(kind='bar')\n",
@@ -302,7 +302,7 @@
         "id": "EyqB_PZOnbNq"
       },
       "source": [
-        "The distribution is skewed to the right. Over 50% of the ratings are 5, followed by a little below 20% with 4 star ratings. And the percentages of ratings keep going down until below 10% of the ratings are 2 stars."
+        "La distribución está sesgada hacia la derecha. Más del 50% de las calificaciones son 5, seguido de poco menos del 20% con calificaciones de 4 estrellas. Y los porcentajes de calificaciones siguen bajando hasta que menos del 10% de las calificaciones son de 2 estrellas."
       ]
     },
     {
@@ -311,12 +311,12 @@
         "id": "_hoBfcSmncDJ"
       },
       "source": [
-        "### No of unique users and items"
+        "### Número de usuarios y elementos únicos"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -335,9 +335,9 @@
         }
       ],
       "source": [
-        "# Number of unique user id and product id in the data\n",
-        "print('Number of unique USERS in Raw data = ', df['user_id'].nunique())\n",
-        "print('Number of unique ITEMS in Raw data = ', df['prod_id'].nunique())"
+        "# Número de ID de usuario e ID de producto únicos en los datos\n",
+        "print('Número de USUARIOS únicos en datos sin procesar = ', df['user_id'].nunique())\n",
+        "print('Número de ARTÍCULOS únicos en datos sin procesar = ', df['prod_id'].nunique())"
       ]
     },
     {
@@ -346,12 +346,12 @@
         "id": "PhOahvbHnkZJ"
       },
       "source": [
-        "### Users with most no of rating"
+        "### Usuarios con mayor número de calificaciones"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -383,7 +383,7 @@
         }
       ],
       "source": [
-        "# Top 10 users based on rating\n",
+        "# Top 10 usuarios por calificaciones\n",
         "most_rated = df.groupby('user_id').size().sort_values(ascending=False)[:10]\n",
         "most_rated"
       ]
@@ -394,9 +394,9 @@
         "id": "ekGg2mL5oaNA"
       },
       "source": [
-        "## Pre-Processing\n",
+        "## Pre-procesamiento\n",
         "\n",
-        "Let's take a subset of the dataset (by only keeping the users who have given 50 or more ratings) to make the dataset less sparse and easy to work with."
+        "Tomemos un subconjunto del conjunto de datos (manteniendo solo a los usuarios que han dado 50 o más calificaciones) para hacer que el conjunto de datos sea menos disperso y fácil de trabajar."
       ]
     },
     {
@@ -413,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -433,9 +433,9 @@
         }
       ],
       "source": [
-        "print('The number of observations in the final data =', len(df_final))\n",
-        "print('Number of unique USERS in the final data = ', df_final['user_id'].nunique())\n",
-        "print('Number of unique PRODUCTS in the final data = ', df_final['prod_id'].nunique())"
+        "print('El número de observaciones en los datos finales =', len(df_final))\n",
+        "print('Número de USUARIOS únicos en los datos finales = ', df_final['user_id'].nunique())\n",
+        "print('Número de PRODUCTOS únicos en los datos finales = ', df_final['prod_id'].nunique())"
       ]
     },
     {
@@ -444,8 +444,8 @@
         "id": "tsmGpFwqocrg"
       },
       "source": [
-        "- The dataframe **df_final has users who have rated 50 or more items**\n",
-        "- **We will use df_final to build recommendation systems**"
+        "- El dataframe **df_final tiene usuarios que han calificado 50 o más artículos**\n",
+        "- **Usaremos df_final para construir sistemas de recomendación**"
       ]
     },
     {
@@ -454,12 +454,12 @@
         "id": "k6t4Ee-Oo0vD"
       },
       "source": [
-        "### Checking the density of the rating matrix"
+        "### Verificar la densidad de la matriz de calificaciones"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -802,22 +802,22 @@
         }
       ],
       "source": [
-        "#Creating the interaction matrix of products and users based on ratings and replacing NaN value with 0\n",
+        "#Crear la matriz de interacción de productos y usuarios basada en calificaciones y reemplazar valores NaN con 0\n",
         "final_ratings_matrix = df_final.pivot(index = 'user_id', columns ='prod_id', values = 'rating').fillna(0)\n",
-        "print('Shape of final_ratings_matrix: ', final_ratings_matrix.shape)\n",
+        "print('Forma de final_ratings_matrix: ', final_ratings_matrix.shape)\n",
         "\n",
-        "#Finding the number of non-zero entries in the interaction matrix \n",
+        "#Encontrar el número de entradas distintas de cero en la matriz de interacción \n",
         "given_num_of_ratings = np.count_nonzero(final_ratings_matrix)\n",
         "print('given_num_of_ratings = ', given_num_of_ratings)\n",
         "\n",
-        "#Finding the possible number of ratings as per the number of users and products\n",
+        "#Encontrar el número posible de calificaciones según el número de usuarios y productos\n",
         "possible_num_of_ratings = final_ratings_matrix.shape[0] * final_ratings_matrix.shape[1]\n",
         "print('possible_num_of_ratings = ', possible_num_of_ratings)\n",
         "\n",
-        "#Density of ratings\n",
+        "#Densidad de calificaciones\n",
         "density = (given_num_of_ratings/possible_num_of_ratings)\n",
         "density *= 100\n",
-        "print ('density: {:4.2f}%'.format(density))\n",
+        "print ('densidad: {:4.2f}%'.format(density))\n",
         "\n",
         "final_ratings_matrix.head()"
       ]
@@ -828,12 +828,12 @@
         "id": "7dzfbm7tw1YJ"
       },
       "source": [
-        "# Rank Based Recommendation System "
+        "# Sistema de Recomendación Basado en Clasificación"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -998,16 +998,16 @@
         }
       ],
       "source": [
-        "#Calculate the average rating for each product \n",
+        "#Calcular la calificación promedio para cada producto \n",
         "average_rating = df_final.groupby('prod_id').mean()['rating']\n",
         "\n",
-        "#Calculate the count of ratings for each product\n",
+        "#Calcular el número de calificaciones para cada producto\n",
         "count_rating = df_final.groupby('prod_id').count()['rating']\n",
         "\n",
-        "#Create a dataframe with calculated average and count of ratings\n",
+        "#Crear un dataframe con el promedio calculado y el número de calificaciones\n",
         "final_rating = pd.DataFrame({'avg_rating':average_rating, 'rating_count':count_rating})\n",
         "\n",
-        "#Sort the dataframe by average of ratings\n",
+        "#Ordenar el dataframe por promedio de calificaciones\n",
         "final_rating = final_rating.sort_values(by='avg_rating',ascending=False)\n",
         "\n",
         "final_rating.head()"
@@ -1015,19 +1015,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "OhUAXTtgw-8Q"
       },
       "outputs": [],
       "source": [
-        "#defining a function to get the top n products based on highest average rating and minimum interactions\n",
+        "#definiendo una función para obtener los n productos principales según la calificación promedio más alta e interacciones mínimas\n",
         "def top_n_products(final_rating, n, min_interaction):\n",
         "    \n",
-        "    #Finding products with minimum number of interactions\n",
+        "    #Encontrar productos con el número mínimo de interacciones\n",
         "    recommendations = final_rating[final_rating['rating_count']>min_interaction]\n",
         "    \n",
-        "    #Sorting values w.r.t average rating \n",
+        "    #Ordenar valores respecto a la calificación promedio \n",
         "    recommendations = recommendations.sort_values('avg_rating',ascending=False)\n",
         "    \n",
         "    return recommendations.index[:n]"
@@ -1039,7 +1039,7 @@
         "id": "wem_XKyUxGEw"
       },
       "source": [
-        "## Recommending top 5 products with 50 minimum interactions based on popularity"
+        "## Recomendando los 5 productos principales con 50 interacciones mínimas basado en popularidad"
       ]
     },
     {
@@ -1074,7 +1074,7 @@
         "id": "1dMFKudcxJW5"
       },
       "source": [
-        "## Recommending top 5 products with 100 minimum interactions based on popularity"
+        "## Recomendando los 5 productos principales con 100 interacciones mínimas basado en popularidad"
       ]
     },
     {
